modules/lwyd/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lwyd-front
  namespace: lwyd
  labels:
    app.kubernetes.io/name: lwyd-front
spec:
  selector:
    app: lwyd-front
  ports:
    - name: http
      port: 80
      protocol: HTTP
      targetPort: http
