modules/lwyd/front/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lwyd
  namespace: lwyd
spec:
  parentRefs:
    - name: central-gateway
      namespace: infra
      sectionName: lwyd-front
  hostnames:
    - seena.cc
  rules:
    - backendRefs:
        - name: lwyd-front
          kind: Service
          port: 80
